force-app/main/default/objects/Case_Reason_to_Layout_Map__mdt/Case_Reason_to_Layout_Map__mdt.object-meta.xml
<CustomObject>
    <label>Case Reason to Layout Map</label>
    <pluralLabel>Case Reason to Layout Map</pluralLabel>
</CustomObject>