force-app/main/default/objects/Case_Reason_to_Layout_Map__mdt/fields/Case_Layout__c.field-meta.xml
<CustomField>
    <fullName>Case_Layout__c</fullName>
    <label>Case Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>