force-app/main/default/objects/Case_Reason_to_Layout_Map__mdt/fields/Case_Queue__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue__c</fullName>
    <description>The API Name of the Queue to set the Owner to on create.</description>
    <label>Case Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>