force-app/main/default/objects/Case_Reason_to_Layout_Map__mdt/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <inlineHelpText>Optional field to define the Case Record Type; used when the same Case Reasons appear on multiple record types.</inlineHelpText>
    <label>Case Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>