force-app/main/default/objects/Case_Reason_to_Layout_Map__mdt/fields/Remove_Standard_Fields__c.field-meta.xml
<CustomField>
    <fullName>Remove_Standard_Fields__c</fullName>
    <description>Comma delimited list of standard fields to hide.</description>
    <label>Remove Standard Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>