force-app/main/default/objects/Case_Reason_to_Layout_Map__mdt/fields/Require_File_Upload__c.field-meta.xml
<CustomField>
    <fullName>Require_File_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require File Upload</label>
    <type>Checkbox</type>
</CustomField>