force-app/main/default/objects/Case_Reason_to_Layout_Map__mdt/listViews/All_Case_Reason_to_Layout_Maps.listView-meta.xml
<ListView>
    <fullName>All_Case_Reason_to_Layout_Maps</fullName>
    <columns>MasterLabel</columns>
    <columns>Case_Record_Type__c</columns>
    <columns>Case_Reason__c</columns>
    <columns>Case_Layout__c</columns>
    <columns>Case_Queue__c</columns>
    <columns>Show_File_Upload__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Case Reason to Layout Maps</label>
    <language>en_US</language>
</ListView>